service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tls-ca
  labels:
    app: ca
spec:
  ports:
  - port: 7054
    targetPort: 7054
    name: caport
  type: LoadBalancer
  selector:
    app: ca
