ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-ca
spec:
  rules:
  - host: tls-ca.dev.blockchain.factorialofn.in
    http:
      paths: 
      - path: /enroll
        backend: 
          serviceName: tls-ca
          servicePort: 7054
